--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: production-container
-        image: <todo>
+        image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0"
         ports:
         - containerPort: 8080
